--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rampart+One&display=swap');
 body{
-    background-image: url(/images/12.jpg);
+    background-image: url(https://i.pinimg.com/originals/61/e7/8b/61e78b08a8dd18779132812218a9f2a8.jpg);
     height: 5000px;
 }
 
